fix(logs): preserve whitespace in logs (#191)
* fix(logs): preserve whitespace in logs

* fix linter

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -798,6 +798,10 @@ nav {
   margin: 0 0.5em;
 }
 
+.logs code > div {
+  white-space: pre-wrap;
+}
+
 .line .wrapper {
   display: flex;
   flex: 1;
